# MPML

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  cmake.md
include/: main.hpp  mpml.cpp  mpml.hpp
include/matrices/: matrix.hpp  matrix2.hpp  matrix4.hpp
include/matrices/special_overloads/: iostream_matrices.hpp
include/mpml/: mpml.hpp
include/mpml/functions/: basic.hpp  trigo.hpp
include/mpml/matrices/: matrices.hpp  matrix.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  matrix_utility.hpp  transforms.hpp
include/mpml/matrices/special_overloads/: iostream_matrices.hpp  print_matrices.hpp
include/mpml/quaternions/: quaternion.hpp  quaternion_utility.hpp  quaternions.hpp  transforms.hpp
include/mpml/quaternions/special_overloads/: print_quaternions.hpp
include/mpml/utilities/: angle.hpp  numbers.hpp
include/mpml/utilities/types/: angle.hpp
include/mpml/vectors/: transforms.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_utility.hpp  vectors.hpp
include/mpml/vectors/special_overloads/: hash_vectors.hpp  iostream_vectors.hpp  print_vectors.hpp
include/utilities/: numbers.hpp
include/utilities/data_types/: data_orga.hpp
include/utilities/types/: angle.hpp  proxy.hpp  quaternion.hpp
include/vectors/: utility.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_presets.hpp  vectors.hpp
include/vectors/special_overloads/: iostream_vectors.hpp
src/: main.cpp
